--- a/css/all.css
+++ b/css/all.css
@@ -1,32 +1,44 @@
-.top-head-title, .top-head-subtitle {
-  text-align: center; }
+#header {
+  background: transparent;
+  padding: 0; }
 
-.top-head-btns {
-  text-align: right; }
-
-.navbar-default {
-  background-image: none;
-  background-color: transparent;
-  border-color: transparent;
-  box-shadow: none; }
-  .navbar-default .nav-pills li a {
-    height: 50px;
+.top-head {
+  background-color: #0462C6;
+  padding: 7px 0; }
+  .top-head-phone {
     color: #fff;
-    font-size: 18px;
-    background-color: #f60;
-    padding: 15px; }
+    text-align: center;
+    font-size: 20px; }
+  .top-head-phones {
+    padding-top: 10px; }
+  .top-head .glyphicon {
+    color: green;
+    font-size: 16px; }
+  .top-head-title,
+  .top-head-title a, .top-head-subtitle {
+    text-align: center;
+    color: #fff; }
+  .top-head-title {
+    font-size: 36px;
+    margin-bottom: 15px; }
+  .top-head-btns {
+    text-align: center;
+    margin-top: 7px; }
 
-.navbar-collapse {
-  padding-right: 0; }
+.navbar {
+  padding: 2em 0;
+  background-color: #213047; }
+  .navbar-default {
+    background-image: none;
+    border-color: transparent;
+    border-radius: 0; }
+  .navbar-collapse {
+    padding-right: 0; }
+  .navbar-brand {
+    padding: 0.5em 0; }
 
-.nav .open > a, .nav .open > a:focus, .nav .open > a:hover {
-  background-color: #ffa366;
-  border-color: #ccc; }
-
-.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
-  background-color: #ffa366;
-  border-color: #ccc;
-  background-image: none; }
+.nav {
+  padding: 1em 0; }
 
 .language-container {
-  margin: 8px 8px 15px 10px; }
+  margin: 7px 0; }
