--- a/scss/components/_top-head.scss
+++ b/scss/components/_top-head.scss
@@ -1,45 +1,62 @@
+#header{
+	background: transparent;
+	padding: 0;
+}
+
 .top-head{
+	background-color: #0462C6;
+	padding: 7px 0;
+	&-phone{
+		color: #fff;
+		text-align: center;
+		font-size: 20px;
+	}
+	&-phones{
+		padding-top: 10px;
+	}
+	.glyphicon{
+		color: green;
+		font-size: 16px;
+	}
 	&-title,
+	&-title a,
 	&-subtitle{
 		text-align: center;
+		color: #fff;
+	}
+	&-title{
+		font-size: 36px;
+		margin-bottom: 15px;
 	}
 	&-btns{
-		text-align: right;
+		text-align: center;
+		margin-top: 7px;
 	}
 
 }
 
 
 .navbar{
+	padding: 2em 0;
+	background-color: #213047;
 	&-default{
 		background-image: none;
-		background-color: transparent;
 		border-color: transparent;
-		box-shadow: none;
-		& .nav-pills li a{
-		    height: 50px;
-		    color: #fff;
-		    font-size: 18px;
-		    background-color: #f60;
-		    padding: 15px;
-		}
-
+		border-radius: 0;
 	}
 	&-collapse{
 		padding-right: 0;
 	}
+	&-brand{
+		padding: 0.5em 0;
+	}
 	
 }
-.nav .open>a, .nav .open>a:focus, .nav .open>a:hover{
-	background-color: lighten(#f60,20%);
-	border-color: #ccc;
-}
-.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover{
-	background-color: lighten(#f60,20%);
-	border-color: #ccc;
-	background-image: none;
+
+.nav{
+	    padding: 1em 0;
 }
 
 .language-container{
-	    margin: 8px 8px 15px 10px;
+	    margin: 7px 0;
 }
