some blocks chamged

--- a/css/all.css
+++ b/css/all.css
@@ -12,8 +12,8 @@
   .top-head-phones {
     padding-top: 10px; }
   .top-head .glyphicon {
-    color: green;
-    font-size: 16px; }
+    color: #69c569;
+    font-size: 18px; }
   .top-head-title,
   .top-head-title a, .top-head-subtitle {
     text-align: center;
@@ -42,3 +42,79 @@
 
 .language-container {
   margin: 7px 0; }
+
+body p {
+  font-size: 16px; }
+
+.block-heading {
+  position: relative;
+  padding-bottom: 15px;
+  margin-bottom: 50px; }
+  .block-heading:before {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 50%;
+    margin-left: -4px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: #EE6247;
+    z-index: 2; }
+  .block-heading:after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 50%;
+    margin-left: -8%;
+    width: 16%;
+    height: 4px;
+    background: #0462C6; }
+
+section.results {
+  padding: 2em 0; }
+  section.results img {
+    margin-top: -50px; }
+
+section .try-item {
+  font-size: 20px;
+  padding: 0 40px; }
+
+section .to-buy-heading {
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  text-align: left; }
+
+.table-bordered.prices {
+  background: #fff; }
+
+#ps-carousel-feedback .carousel-inner.feedbacks > .item {
+  height: 310px;
+  padding: 0 5px; }
+
+#ps-carousel-feedback {
+  margin-bottom: 30px; }
+
+#regions_chart {
+  width: 90%;
+  margin: -10px auto 0; }
+
+.instruction-paper {
+  background-image: url("../images/IMG_252320.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  width: 60%;
+  margin: 0 auto;
+  font-size: 16px;
+  padding: 50px;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.5); }
+
+.instruction-heading {
+  font-size: 18px;
+  font-weight: 700;
+  color: #000; }
+
+#footer {
+  background: #213047; }
