--- a/scss/components/_top-head.scss
+++ b/scss/components/_top-head.scss
@@ -15,8 +15,8 @@
 		padding-top: 10px;
 	}
 	.glyphicon{
-		color: green;
-		font-size: 16px;
+		color: #69c569;
+		font-size: 18px;
 	}
 	&-title,
 	&-title a,
