--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,1 +1,4 @@
-@import "components/top-head"
+@import "components/top-head";
+@import "components/block";
+@import "components/instructions";
+@import "components/footer";
