--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,4 +1,5 @@
 @import "components/top-head";
 @import "components/block";
 @import "components/instructions";
+@import "components/pricing";
 @import "components/footer";
