--- a/scss/components/_instructions.scss
+++ b/scss/components/_instructions.scss
@@ -1,14 +1,22 @@
 .instruction{
+
 	&-paper{
 		background-image: url("../images/IMG_252320.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center center;
-		width: 60%;
+		width: 100%;
 		margin: 0 auto;
 		font-size: 16px;
 		padding: 50px;
 		box-shadow:  0px 0px 10px 3px rgba(0, 0, 0, 0.5);
+	}
+
+	&-bg{
+		background-image: url("../images/Doctor2.png");
+		background-repeat: no-repeat;
+		background-size: 25%;
+		background-position: 100% 50%;
 	}
 
 	&-heading{
