offset in certificate

--- a/scss/components/_block.scss
+++ b/scss/components/_block.scss
@@ -80,8 +80,8 @@ section .certificate{
 	&-bg{
 	background-image: url("../images/Doctor.png");
 	background-repeat: no-repeat;
-	background-size: 25%;
-	background-position: 0 50%;}
+	background-size: 20%;
+	background-position: 25% 50%;}
 }
 
 
