--- a/css/all.css
+++ b/css/all.css
@@ -103,8 +103,8 @@ section .to-buy-heading {
 section .certificate-bg {
   background-image: url("../images/Doctor.png");
   background-repeat: no-repeat;
-  background-size: 25%;
-  background-position: 0 50%; }
+  background-size: 20%;
+  background-position: 25% 50%; }
 
 .instruction-paper {
   background-image: url("../images/IMG_252320.jpg");
